# blitzdenk

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  agent.md  blitz.lua  build.zig  build.zig.zon  publish.sh
.github/workflows/: build.yml  pages.yml
crates/blitzagent/: Cargo.toml  README.md
crates/blitzagent/src/: agent.rs  chat.rs  error.rs  lib.rs  tool.rs
crates/blitzagent/src/clients/: claude.rs  gemini.rs  grok.rs  mod.rs  ollama.rs  openai.rs
crates/blitzdenk/: Cargo.toml
crates/blitzdenk/src/: main.rs  prompts.rs  tools.rs  tui.rs
crates/blitzdenk_core/: Cargo.toml
crates/blitzdenk_core/src/: agent.rs  chat.rs  lib.rs
crates/blitzdenk_core/src/clients/: ollama.rs  openai.rs
docs/: blitz.webm  index.html  main.css  zine.ziggy
docs/assets/: style.css
docs/content/: examples.smd  getting-started.smd  index.smd  lua-api.smd
docs/layouts/: blog.xml  devlog.xml
docs/layouts/templates/: base.shtml
docs/public/: index.html  style.css
docs/public/about/: index.html
docs/public/architecture/: index.html
docs/public/examples/: index.html
docs/public/features/: index.html
docs/public/getting-started/: index.html
docs/public/lua-api/: index.html
docs/public/tools/: index.html
docs/public/zig-api/: index.html
src/: agent.rs  app.zig  blitz_default.lua  blitz_defs.lua  commands.zig  config.rs  context_factory.zig  cost.rs  dashboard.zig  error.rs  events.zig  inject.zig  keys.zig  lsp.zig  lua.zig  lua_gen.zig  main.rs  main.zig  mcp.zig  prompts.rs  prompts.zig  registry.zig  root.zig  session.zig  theme.rs  tools.rs  tui.rs  util.zig
src/prompts/: default.md  opencode.md
src/provider/: adapter.zig  agent.zig  anthropic.zig  arena.zig  compact.zig  config.zig  exec.zig  http.zig  openai.zig  responses.zig  root.zig  swarm.zig  tools.zig
src/tools/: agent.zig  ask.zig  bash.rs  bash.zig  edit.rs  edit.zig  fetch.rs  glob.rs  grep.rs  htmlparser.zig  ls.rs  mod.rs  patch.zig  plan.zig  read.rs  read.zig  rg.zig  root.zig  skill.zig  ssh.zig  start.zig  task.rs  task.zig  todo.rs  todo.zig  write.rs  write.zig
src/tui/: buffer.zig  cell.zig  icon.zig  markdown.zig  mod.rs  rect.zig  ring_queue.zig  root.zig  terminal.zig  text_utils.zig  widgets.zig
src/tui/widgets/: chat.rs  input.rs  message.rs  mod.rs  model_selector.rs
src/widgets/: chat.rs  confirm.rs  help.rs  input.rs  message.rs  mod.rs  model_selector.rs  notify.rs  status.rs  title.rs  todo_list.rs
