[package]
name = "blitzdenk"
version = "0.3.0"
edition = "2024"
authors = ["Lorenz Mielke"]
keywords = ["ai", "tui", "chat", "agent", "tool"]
description = "A multi api agent tui"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Mirza-Samad-Ahmed-Baig/blitzdenk"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
diffy = "0.4.2"
genai = { git = "https://github.com/Lommix/rust-genai.git" }
glob = "0.3.2"
grep = "0.3.2"
home = "0.5.11"
html2md = "0.2.15"
ignore = "0.4.23"
ratatui = { version = "0.29.0", features = [
  "all-widgets",
  "palette",
  "scrolling-regions",
  "serde",
  "unstable-rendered-line-info",
] }
reqwest = { version = "0.12.20", features = ["json"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
throbber-widgets-tui = "0.8.0"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tui-markdown = "0.3.5"
tui-textarea = "0.7.0"
tui-widgets = { git = "https://github.com/joshka/tui-widgets", rev = "0ac812e" }
