[package]
name = "blitzagent"
authors = ["Lorenz Mielke"]
description = "multi api Ai-agent framework"
version = "0.2.0"
edition = "2024"
keywords = ["ai", "chat", "agent", "tool"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Lommix/blitzdenk"

[dependencies]
async-trait = "0.1.88"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
